Added update funcitonality successfully

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -8,5 +8,5 @@
 <div *ngFor="let project of projects" class="project" (click)="openProject(project)">
     <h4>{{project.title}}</h4>
     <p>Owner: &nbsp; {{project.superAdmin.name }} &nbsp;({{project.superAdmin.email }})</p>
-    <p>bugs: {{project.bugAssigned.length}}</p>
+    <!-- <p>bugs: {{project.bugAssigned.length}}</p> -->
 </div>
