--- a/src/app/create-bug/create-bug.component.html
+++ b/src/app/create-bug/create-bug.component.html
@@ -13,8 +13,8 @@
 </select><br><br>
 <div *ngIf="users.length !== 0">
   <p>Assign Developer:</p>
-  <div class="devList" *ngFor="let user of users;let i=index" (click)="addDev(user,index)"
-    [ngClass]="{selectedDev: devs.get(id)}">
+  <div class="devList" *ngFor="let user of users;let i=index" (click)="addDev(user,i)"
+    [ngClass]="{selectedDev: devs.get(i)}">
     <h5>{{user.userId.name}}</h5>
     <p>{{user.role}}</p>
   </div>
