--- a/src/app/projects/projects.component.scss
+++ b/src/app/projects/projects.component.scss
@@ -54,10 +54,21 @@ td {
 }
 
 .devsColumn {
-  max-width: 100px;
+  max-width: 150px;
+  min-width: 120px;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
+}
+
+.bug_title,
+.bug_subTitle {
+  input {
+    max-width: 100%;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+  }
 }
 
 .actions {
@@ -71,5 +82,28 @@ td {
       border: 0.5px solid black;
       pointer-events: all;
     }
+  }
+}
+
+.assignDevModal {
+  border: 1px solid black;
+  width: 60vw;
+  &_dev {
+    margin: 10px;
+    padding: 5px;
+    border: 1px solid black;
+    width: max-content;
+    cursor: pointer;
+
+    &:hover {
+      background: lightblue;
+    }
+  }
+}
+
+.selectedDevs {
+  background: orange;
+  &:hover {
+    background: rgba(orange, 0.7);
   }
 }
