--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,12 +1,17 @@
-<h1>Dashboard</h1>
+<h1 class="Title">Dashboard</h1>
+<!-- <button (click)="signOut()">Sign Out</button> -->
 <br>
-<input type="text" placeholder="Project name" #proname>
+<p class="addp">Add a new Project:</p>
+<input type="text" placeholder="Project name" #proname class="AddInp">
 <button (click)="createProject(proname.value)">Create Project</button>
 <br><br>
 <hr>
 <br>
-<div *ngFor="let project of projects" class="project" (click)="openProject(project)">
-    <h4>{{project.title}}</h4>
-    <p>Owner: &nbsp; {{project.superAdmin.name }} &nbsp;({{project.superAdmin.email }})</p>
-    <!-- <p>bugs: {{project.bugAssigned.length}}</p> -->
+
+<div class="project_container">
+    <div *ngFor="let project of projects" class="project" (click)="openProject(project)">
+        <h4>{{project.title}}</h4>
+        <p>Owner: &nbsp; {{project.superAdmin.name }} &nbsp;({{project.superAdmin.email }})</p>
+        <!-- <p>bugs: {{project.bugAssigned.length}}</p> -->
+    </div>
 </div>
