--- a/src/app/projects/projects.component.scss
+++ b/src/app/projects/projects.component.scss
@@ -1,15 +1,55 @@
+.header {
+  display: grid;
+  grid-template-columns: 7fr 1fr;
+  &_title {
+  }
+
+  &_actions {
+    display: flex;
+    align-items: center;
+
+    button {
+      cursor: pointer;
+      transition: 0.2s;
+      &:hover {
+        box-shadow: 1px 1px 20px #d3d3d3;
+        transform: scale(1.01);
+      }
+    }
+  }
+}
+
+.search {
+  &_input {
+    width: 30vw;
+    padding: 10px;
+    border: 1px solid black;
+    border-right: 0px;
+  }
+  button {
+    width: 5vw;
+  }
+}
+
 .userList {
   border: 0.5px solid black;
-  padding: 7px;
+  width: 30vw;
+  padding: 10px;
   cursor: pointer;
+  color: #353b48;
 
   &:hover {
     background: lightcyan;
   }
 }
 
-.mainUserInput {
-  width: 50vw;
+.createBug {
+  cursor: pointer;
+  transition: 0.2s;
+  &:hover {
+    box-shadow: 0px 0px 5px #d3d3d3;
+    transform: scale(1.02);
+  }
 }
 
 .bug {
@@ -35,6 +75,7 @@ table {
   font-family: arial, sans-serif;
   border-collapse: collapse;
   width: 100%;
+  box-shadow: 0px 1px 10px #d3d3d3;
 }
 
 td,
@@ -42,12 +83,23 @@ th {
   border: 1px solid #dddddd;
   text-align: left;
   padding: 8px;
+  transition: 0.2s;
+  cursor: pointer;
+  &:hover {
+  }
+}
+
+th {
+  color: #4cd137;
 }
 
 td {
+  color: #130f40;
   input,
   select {
+    border-color: #0294bd !important;
     margin: 0;
+    color: #130f40;
     border: none;
     pointer-events: none;
   }
@@ -73,12 +125,30 @@ td {
 
 .actions {
   text-align: center;
+  button {
+    background: transparent;
+    color: #0294bd;
+    cursor: pointer;
+    transition: 0.2s;
+
+    &:hover {
+      background: #0294bd;
+      color: white;
+    }
+  }
+
+  &_update,
+  &_cancel {
+    width: 100%;
+    text-align: center;
+  }
 }
 
 .update {
   td {
     input,
     select {
+      padding: 10px;
       border: 0.5px solid black;
       pointer-events: all;
     }
@@ -86,24 +156,93 @@ td {
 }
 
 .assignDevModal {
-  border: 1px solid black;
+  position: absolute;
+  top: 30%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 30;
+  background: white;
+  border-radius: 5px;
   width: 60vw;
+  padding: 20px;
+
+  &_container {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-gap: 2vh;
+    margin-bottom: 2vh;
+  }
   &_dev {
-    margin: 10px;
+    border: 0.5px solid #0294bd;
+    border-radius: 5px;
     padding: 5px;
-    border: 1px solid black;
-    width: max-content;
     cursor: pointer;
 
     &:hover {
       background: lightblue;
     }
   }
+
+  button {
+    margin-right: 10px;
+    cursor: pointer;
+    transition: 0.2s;
+
+    &:hover {
+      transform: scale(1.01);
+      box-shadow: 0px 0px 5px #d3d3d3;
+    }
+  }
+
+  &_backdrop {
+    position: absolute;
+    top: 0%;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    z-index: 20;
+    color: transparent;
+    background: rgba(black, 0.5);
+  }
 }
 
 .selectedDevs {
-  background: orange;
+  background: #3498db;
+  background: #2ecc71;
+  color: white;
   &:hover {
-    background: rgba(orange, 0.7);
+    background: rgba(#0294bd, 0.7);
+  }
+}
+
+.ViewSolution {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 30;
+  background: white;
+  border-radius: 5px;
+  width: 60vw;
+  height: 70vh;
+  padding: 20px;
+  box-sizing: border-box;
+
+  textarea {
+    border: 0.5px solid #0294bd;
+    width: 50vw;
+    height: 50vh;
+    resize: none;
+    overflow-y: scroll;
+  }
+
+  button {
+    cursor: pointer;
+    transition: 0.3s;
+
+    &:hover {
+      box-shadow: 0px 0px 5px #d3d3d3;
+      transform: scale(1.01);
+    }
   }
 }
