--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,4 +1,5 @@
 .container {
+  overflow-x: hidden;
   display: grid;
   grid-template-columns: 1fr 5fr;
   .sidemenu {
@@ -24,7 +25,7 @@
         cursor: pointer;
         padding: 10px;
         list-style: none;
-        background: #d3d3d3;
+        background: #7ed6df;
         color: white;
 
         transition: 0.3s;
@@ -37,6 +38,7 @@
   }
 
   .main {
+    overflow-x: hidden;
     padding: 1vh;
     // background: ;
     // border: 1px solid black;
