--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -3,7 +3,7 @@
 <br>
 <p class="addp">Add a new Project:</p>
 <input type="text" placeholder="Project name" #proname class="AddInp">
-<button (click)="createProject(proname.value)">Create Project</button>
+<button (click)="createProject(proname.value)" class="createBtn">Create Project</button>
 <br><br>
 <hr>
 <br>
