--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,6 +5,11 @@ body {
   padding: 0;
   font-family: "Roboto", sans-serif;
   position: relative;
+
+  ::selection {
+    background: #9c88ff;
+    color: white;
+  }
 }
 
 button {
@@ -14,4 +19,10 @@ button {
   background: #0294bd;
   color: white;
   border: 1px solid #0294bd;
+  transition: 0.2s;
+  cursor: pointer;
+
+  &:hover {
+    box-shadow: 5px 5px 10px #d3d3d3;
+  }
 }
