Minor bug Fix Create bug

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -38,7 +38,7 @@
   }
 
   .main {
-    overflow-x: hidden;
+    // overflow-x: hidden;
     padding: 1vh;
     // background: ;
     // border: 1px solid black;
