--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,5 +1,7 @@
-<input type="email" placeholder="email" #email><br>
-<input type="password" placeholder="password" #pass><br>
-<button (click)="login(email.value, pass.value)">Login</button>
-<br>
-<h1 *ngIf="message">{{message}}</h1>
+<div class="form">
+    <input type="email" placeholder="email" #email><br>
+    <input type="password" placeholder="password" #pass><br>
+    <button (click)="login(email.value, pass.value)">Login</button>
+    <br>
+    <h1 *ngIf="message">{{message}}</h1>
+</div>
