--- a/src/app/create-bug/create-bug.component.html
+++ b/src/app/create-bug/create-bug.component.html
@@ -53,4 +53,4 @@
 </div>
 <div *ngIf="users.length === 0">You don't have any teammates yet!</div>
 
-<button (click)="create(title.value,subtitle.value,deadline.value,select)" class="createBtn">Create</button>
+<button (click)="create(title.value,subtitle.value,deadline.value)" class="createBtn">Create</button>
