List of teammates visible, added spinner at relevant position

--- a/src/app/create-bug/create-bug.component.html
+++ b/src/app/create-bug/create-bug.component.html
@@ -54,3 +54,4 @@
 <div *ngIf="users.length === 0">You don't have any teammates yet!</div>
 
 <button (click)="create(title.value,subtitle.value,deadline.value)" class="createBtn">Create</button>
+<ngx-spinner></ngx-spinner>
