View teammate's Profile feature added

--- a/src/app/profile/profile.component.scss
+++ b/src/app/profile/profile.component.scss
@@ -12,8 +12,9 @@
     }
   }
 
-  //   .designation {
-  //   }
+     .designation {
+	text-transform: uppercase;  
+   }
 
   input {
     pointer-events: none;
