--- a/src/app/projects/projects.component.scss
+++ b/src/app/projects/projects.component.scss
@@ -34,9 +34,14 @@
         color: white;
         box-shadow: 0px 0px 10px #d3d3d3;
         position: relative;
+        transition: 0.2s;
 
         b {
           text-transform: uppercase;
+        }
+
+        &:hover {
+          transform: scale(1.1);
         }
 
         .user_tooltip {
