--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,7 +1,9 @@
 <div class="form">
     <input type="email" placeholder="email" #email><br>
     <input type="password" placeholder="password" #pass><br>
-    <button (click)="login(email.value, pass.value)">Login</button>
+    <button (click)="login(email.value, pass.value)">Login</button><br>
+    <p style="color: #30336b;">Do not have an account? Create one below:</p>
+    <button (click)="register()">Create new account</button>
     <br>
     <h1 *ngIf="message">{{message}}</h1>
 </div>
