Added redirection for production build

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,6 +12,7 @@
             <li>Coming Soon</li>
             <li>Coming Soon</li>
             <li (click)="logOut()" style="background: red;">Logout</li>
+            <!-- <li (click)="logIn()" *ngIf="!loggedIn">Login</li> -->
         </ul>
     </div>
     <div class="FakeDiv" style="color: transparent; background: transparent;z-index: -10000000;">.</div>
